# minrt

./: meson.build
lib/ldscripts/: ld_size_symbols.ld  multiboot.mem
src/c/: fini.c
src/gba/: crt0_agbpack.S
